Name:                eccrypto
Version:             0.5.0
Synopsis:	     Elliptic Curve Cryptography for Haskell
Description:         Pure math & algorithms for Elliptic Curve Cryptography in Haskell. 
		     The implementation should be timing-attack resistant, pure Haskell and reasonably fast.
		     This library was formerly known as "hecc", but since this would imply Hyperelliptic ECC, the name was changed. 
		     Also the scope was changed to be the base for higher lirbaries by selecting "best" internal formats.
License:             BSD3
License-file:        COPYING
Copyright:	     (c) Marcel Fourné, 2009-2014
Author:              Marcel Fourné
Maintainer:          Marcel Fourné (mail@marcelfourne.de)
Category:	     Cryptography
Stability:	     experimental
Build-Type:          Simple
Cabal-Version:       >=1.9
Data-Files:	     README
Extra-Source-Files:  src/bench.hs

Library
  hs-source-dirs:	
    src
  Build-Depends:  	
    base >= 4 && < 5,
    cereal,
    crypto-api,
    hF2
  Exposed-modules:	
    Crypto.ECC.NIST.Base
    Crypto.ECC.ECDH
    Crypto.ECC.NIST.StandardCurves
  ghc-options:
    -Wall

source-repository head
  type:     git
  location: https://github.com/mfourne/hs-eccrypto.git
