Name:                eccrypto
Version:             0.1.0
Synopsis:	     Elliptic Curve Cryptography for Haskell
Description:         Elliptic Curve Cryptography in Haskell, evolved for practical usability from higher-level libraries.
		     .
		     The implementation should be timing-attack resistant, pure Haskell and reasonably fast.
		     .
		     This library was formerly known and its code originated as hecc, but since this would imply Hyperelliptic ECC, the name was changed. 
		     .
		     Also the scope was changed by selecting best internal formats and no longer trying to be overly general, allowing more optimizations.
License:             BSD3
License-file:        COPYING
Copyright:	     (c) Marcel Fourné, 2009-2014
Author:              Marcel Fourné
Maintainer:          Marcel Fourné (mail@marcelfourne.de)
Category:	     Cryptography
Stability:	     experimental
Build-Type:          Simple
Cabal-Version:       >=1.9
Data-Files:	     README
Extra-Source-Files:  src/bench.hs

Library
  hs-source-dirs: src
  Build-Depends: base >= 4 && < 5
               , cereal
               , crypto-api
               , vector
  Exposed-modules:
    Crypto.Common
    Crypto.F2
    Crypto.Fi
    Crypto.ECC.NIST.Base
    Crypto.ECC.NIST.ECDH
    Crypto.ECC.NIST.StandardCurves
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/mfourne/hs-eccrypto.git
